--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
   </head>
   <body>
+          <p>
+            <span sec:authentication="principal.user.username">duke</span>さんログイン中。
+        </p>
+        <form th:action="@{/logout}" method="post"><input type="submit" class="btn btn-default btn-xs" value="ログアウト" /></form>
+
     <form th:action="@{/books/create}" th:object="${bookForm}" method="post">
         <table>
         <tr><td>タイトル:</td><td><input type="text" name="title" th:field="*{title}" th:errorclass="error-input" />
